--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -18,7 +18,39 @@
   
   <body id="body-pd" tabindex="0"></body>
     <main>
-      <section class="counts section-bg">
+      <section class="header-main">
+        <div class="container ">
+          <div class="row">
+            <div class="col-9">
+              <div class="col-4">
+                <div id="custom-search-input">
+                  <div class="input-group col-md-12">
+                      <input type="text" class="form-control input-lg" placeholder="Cari" />
+                      <span class="input-group-btn">
+                          <button class="btn btn-info btn-lg" type="button">
+                              <img class="search" src="..//public/icons/search.png" alt="">
+                          </button>
+                      </span>
+                  </div>
+              </div>
+              </div>
+              
+
+
+
+
+
+            </div>
+            <div class="col-3">
+              Column
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+
+      <section class="counts section-bg mt-5">
         <div class="container">
   
           <div class="row no-gutters">
@@ -27,7 +59,7 @@
               <div class="count-box-pemasukan">
                 <p class="category-title"><strong>Pemasukan</strong></p>
                 <img class="category-icon" src="..//public/icons/income.png" alt="">
-                <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter">Rp. 123.000.000</span>
+                <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter">+Rp. 123.000.000</span>
                 <!-- <a href="#">Find out more &raquo;</a> -->
               </div>
             </div>
@@ -36,7 +68,7 @@
               <div class="count-box-saldo">
                 <p class="category-title"><strong>Saldo Dompet</strong></p>
                 <img class="category-icon" src="..//public/icons/wallet.png" alt="">
-                <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter">Rp. 123.000.000</span>
+                <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter">Rp. 150.000</span>
                 <!-- <a href="#">Find out more &raquo;</a> -->
               </div>
             </div>
@@ -45,7 +77,7 @@
               <div class="count-box-pengeluaran">
                 <p class="category-title"><strong>Pengeluaran</strong></p>
                 <img class="category-icon" src="..//public/icons/spend.png" alt="">
-                <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter">Rp. 123.000.000</span>
+                <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter">-Rp. 123.000.000</span>
                 <!-- <a href="#">Find out more &raquo;</a> -->
               </div>
             </div>
