--- a/src/styles/propertise/_variabels.scss
+++ b/src/styles/propertise/_variabels.scss
@@ -20,9 +20,9 @@ $icon-active-background: #d4eeff;
 $background-wallet: #709fb9;
 $background-logout: #c75957;
 
-$background-font-income: #3bab96;
-$background-amount-wallet: #779eb8;
-$background-font-outcome: #d56e57;
+$background-font-income: #13AD96;
+$background-amount-wallet: #709FB9;
+$background-font-outcome: #DD6A53;
 
 $background-landing:#EEF7FF;
 
