--- a/src/styles/components/_header-side-bar.scss
+++ b/src/styles/components/_header-side-bar.scss
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 1.5rem 0.5rem 1rem;
   z-index: var(--z-fixed);
   transition: 0.5s;
 
@@ -153,18 +153,24 @@
       }
 
       .dropdown-menu.show {
-        transform: translate3d(-12px, 70px, 0px) !important;
+        transform: translate3d(0px, 70px, 0px) !important;
         position: absolute;
         padding: 0.5rem 1rem;
+        border-radius: 10px;
         background-color: $background-wallet;
         color: white;
         font-weight: 600;
+
+
+        @include media-in(tablet) {
+          transform: translate3d(-12px, 70px, 0px) !important;
+        }
 
         &:after {
           content: '';
           position: absolute;
           top: -30px;
-          left: calc(50% - 10px);
+          right: calc(0% + 3px);
           border-top: 15px solid transparent;
           border-right: 15px solid transparent;
           border-bottom: 15px solid $background-wallet;
