--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import '~bootstrap/dist/css/bootstrap.css';
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
+@import url('https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css');
 
 @import "propertise/variabels";
 @import "propertise/mixins";
