--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,8 @@
 @import 'pages/pages-main';
 @import 'components/kategoriList';
 @import 'components/searchbar';
+@import 'components/btnAddTransaction';
+@import 'components/chooseMonth';
 
 
 * {
