--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,7 +16,7 @@
     <script src="https://code.iconify.design/3/3.0.0/iconify.min.js"></script>
   </head>
   
-  <body id="body-pd" tabindex="0"></body>
+  <body id="body-pd" tabindex="0">
     <main>
       <section class="header-main">
         <div class="container ">
@@ -25,24 +25,25 @@
               <div class="col-4">
                 <div id="custom-search-input">
                   <div class="input-group col-md-12">
-                      <input type="text" class="form-control input-lg" placeholder="Cari" />
-                      <span class="input-group-btn">
-                          <button class="btn btn-info btn-lg" type="button">
-                              <img class="search" src="..//public/icons/search.png" alt="">
+                      <input type="text" class="form-control input-lg form-search" placeholder="Cari Transaksi" />
+                      <span class="input-group-btn ">
+                          <button class="btn btn-info" type="button">
+                              <img class="icSearch" src="..//public/icons/search.png" alt="">
                           </button>
                       </span>
                   </div>
               </div>
               </div>
-              
-
-
-
-
-
             </div>
-            <div class="col-3">
-              Column
+            <div class="col-3 d-flex justify-content-end">
+              <!-- <button class="btn btnAdd"  href="#!" role="button">
+                <img class="icAdd" src="..//public/icons/add.png" alt="">
+                Tambah Transaksi
+              </button> -->
+              <button type="submit" class="btn btn-primary btn-lg button-login">
+                <img class="icAdd" src="..//public/icons/add2.png" alt="">
+                Tambah Transaksi
+              </button>
             </div>
           </div>
         </div>
@@ -86,5 +87,18 @@
   
         </div>
       </section>
+
+      <section>
+          <div class="container d-flex align-items-center mt-5 menu-bulan">
+            <div class="contaier d-flex justify-content-star pilih-bulan">
+              <h1>Pilih Bulan</h1>
+              <h1>Pilih Bulan</h1>
+              <h1>Pilih Bulan</h1>
+            </div>
+          </div>
+      </section>
+
+
     </main>
+  </body>
 </html>
