fix icon in CONFIG

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,11 @@
 
 @import "pages/pages-main";
 
+@import 'components/searchbar';
+@import 'components/btnAddTransaction';
+@import 'components/kategoriList';
+@import 'components/chooseMonth';
+
 * {
   padding: 0;
   margin: 0;
