fix web component search & 3 features

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,47 +16,5 @@
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.1/dist/iconify-icon.min.js"></script>
   </head>
 
-  <body id="body-pd" tabindex="0">
-
-    <main>
-      <section class="header-main">
-        <div class="container ">
-          <div class="row">
-            <div class="col-9">
-              <div class="col-4">
-                <div id="custom-search-input">
-                  <div class="input-group col-md-12">
-                      <input type="text" class="form-control input-lg form-search" placeholder="Cari Transaksi" />
-                      <span class="input-group-btn ">
-                          <button class="btn btn-info" type="button">
-                              <img class="icSearch" src="..//public/icons/search.png" alt="">
-                          </button>
-                      </span>
-                  </div>
-              </div>
-              </div>
-            </div>
-            <div class="col-3 d-flex justify-content-end">
-              <!-- <button class="btn btnAdd"  href="#!" role="button">
-                <img class="icAdd" src="..//public/icons/add.png" alt="">
-                Tambah Transaksi
-              </button> -->
-              <button type="submit" class="btn btn-primary btn-lg button-login">
-                <img class="icAdd" src="..//public/icons/add2.png" alt="">
-                Tambah Transaksi
-              </button>
-            </div>
-          </div>
-        </div>
-      </section>
-
-
-
-      
-
-
-    </main>
-
-
-  </body>
+  <body id="body-pd" tabindex="0"></body>
 </html>
