--- a/src/styles/components/_chooseMonth.scss
+++ b/src/styles/components/_chooseMonth.scss
@@ -1,10 +1,23 @@
 .menu-bulan {
- width: 100%;
+ width: 50%;
  height: 200px;
  background-color: #fff;
  border-radius: 20px;
 }
 
 .pilih-bulan {
- align-items:baseline
+ align-items:baseline;
+ padding: 30px;
+}
+
+.pilih-bulan h1 {
+ font-size: 28px;
+ font-weight: 600;
+}
+
+select{
+	height:48px;
+	width:50%;
+	font-size:18px;
+ float: left;
 }
