--- a/src/styles/pages/profile/_profile.scss
+++ b/src/styles/pages/profile/_profile.scss
@@ -42,7 +42,6 @@ body {
   }
 
   .desc {
-    // padding-top: 0.5rem;
     .name {
       font-size: 1rem;
       font-weight: bold;
@@ -53,7 +52,11 @@ body {
       overflow: hidden;
 
       @include media-in(mobile) {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
+      }
+
+      @include media-in(desktop) {
+        font-size: 1.6rem;
       }
     }
     .email {
@@ -61,7 +64,11 @@ body {
       margin-bottom: 0;
 
       @include media-in(mobile) {
-        font-size: 1rem;
+        font-size: 1.1rem;
+      }
+
+      @include media-in(desktop) {
+        font-size: 1.4rem;
       }
     }
     .edit {
@@ -72,8 +79,6 @@ body {
       display: flex;
       justify-content: flex-end;
       align-items: center;
-      // margin: auto 0;
-      // background-color: aqua;
     }
 
     @include media-in(desktop) {
@@ -90,16 +95,13 @@ body {
   border-radius: 35px;
   margin: 1rem 1rem;
   .titleKelola {
-    // color: #ffff;
     font-size: 1.2rem;
     font-weight: bold;
     background-color: transparent;
     width: 100%;
-    // height: 45px;
     display: flex;
     justify-content: center;
     align-items: center;
-    // color: white;
 
     @include media-in(tablet) {
       font-size: 1.5rem;
@@ -176,6 +178,23 @@ body {
 
 .logo {
   height: 4rem;
+}
+
+.photo-profile {
+  height: 5rem;
+  width: 5rem;
+  border-radius: 50%;
+  object-fit: cover;
+
+  @include media-in(tablet) {
+    height: 7rem;
+    width: 7rem;
+  }
+
+  @include media-in(desktop) {
+    height: 10rem;
+    width: 10rem;
+  }
 }
 
 #uploadBtn {
