--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,20 +1,23 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="Description" content="Maneyfy, Manage your Money Easily">
-    
-    <title>Maneyfy | Manage your Money Easily</title>
-    <link rel="manifest" href="./manifest.json">
 
-    <!-- IMPORT ICON -->
-    <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
-  
-    <script src="https://code.iconify.design/3/3.0.0/iconify.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.1/dist/iconify-icon.min.js"></script>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="Description" content="Maneyfy, Manage your Money Easily">
 
-  <body id="body-pd" tabindex="0"></body>
+  <title>Maneyfy | Manage your Money Easily</title>
+  <link rel="manifest" href="./manifest.json">
+
+  <!-- IMPORT ICON -->
+  <link rel="preload" as="style" onload="this.rel = 'stylesheet'"
+    href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
+
+  <script src="https://code.iconify.design/3/3.0.0/iconify.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.1/dist/iconify-icon.min.js"></script>
+</head>
+
+<body id="body-pd" tabindex="0"></body>
+
 </html>
