--- a/src/styles/components/_chooseMonth.scss
+++ b/src/styles/components/_chooseMonth.scss
@@ -1,23 +1,62 @@
-.menu-bulan {
- width: 50%;
- height: 200px;
- background-color: #fff;
- border-radius: 20px;
-}
-
-.pilih-bulan {
- align-items:baseline;
+.month .box-month {
+ box-shadow: -10px -5px 40px 0 rgba(0, 0, 0, 0.1);
  padding: 30px;
+ text-align: left;
+ border-radius: 10px;
+ width: 100%;
+ background: #fff;
 }
 
-.pilih-bulan h1 {
+.box-main {
+	width: 500px;
+}
+
+.choose-title {
+	padding: 0 0 0 0;
+ margin: 0;
+ color: #404040;
+ font-family: "Montserrat", sans-serif;
  font-size: 28px;
- font-weight: 600;
 }
 
-select{
-	height:48px;
-	width:50%;
-	font-size:18px;
+.input-month {
+	display: block;
  float: left;
+	padding: 10px;
+ height: 50px;
+	font-weight: 700;
+	border-radius: 10px;
+	border: none	;
+	border-color: #fff;
+	background-color: #CDE3EF;
+ align-items: center;
+}
+
+// .purecounter {
+//  font-size: 30px;
+//  margin-top: 4px;
+//  display: block;
+//  font-weight: 700;
+//  text-align: left;
+//  align-items: center;
+//  color: #fff;
+//  margin-left: 60px;
+// }
+
+.button-report {
+ font-family: "Montserrat", sans-serif;
+ font-weight: 700;
+	margin-left: 10px;
+ font-size: 18px;
+ width: 200px;
+	height: 50px;
+ padding: 10px;
+ border-radius: 4px;
+ transition: 0.5s;
+ text-decoration: none;
+ color: #fff;
+ border-style:none;
+ background: #42B2FA;
+ border-radius: 10px;
+ box-shadow: 0px 5px 30px rgba(216, 220, 255, 0.4);
 }
