add pop-up detail transaksi

--- a/src/styles/pages/dashboard/_dashboard-page.scss
+++ b/src/styles/pages/dashboard/_dashboard-page.scss
@@ -13,3 +13,25 @@
   }
 }
 
+.kategori-icon {
+  object-fit: cover;
+  align-items: center;
+  border-radius: 50%;
+}
+
+.nominal {
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+.detail-desc {
+  .nama-kategori {
+  }
+  .tanggal {
+    font-weight: lighter;
+  }
+  .nama-transaksi {
+    font-weight: bold;
+    font-size: 1.5rem;
+  }
+}
