--- a/src/styles/components/_btnAddTransaction.scss
+++ b/src/styles/components/_btnAddTransaction.scss
@@ -1,26 +1,17 @@
 .icAdd {
- height: 36px;
+ height: 30px;
+ // margin-top: 5px;
 }
 
-// .btnAdd {
-//  font-family: "Montserrat", sans-serif;
-//  // font-size: 20px;
-//  font-weight: 700;
-//  color: #fff;
-//  background-color: #42B2FA;
-// }
 
-// .btnAdd :hover {
-//  color: #404040;
-//  // background-color: #42B2FA;
-// }
-
-.button-login {
+.button-add {
  font-family: "Montserrat", sans-serif;
  font-weight: 700;
  font-size: 18px;
+ padding: 15px;
  width: 243px;
- padding: 10px;
+ height: 60px;
+ float: left;
  border-radius: 4px;
  transition: 0.5s;
  text-decoration: none;
@@ -29,4 +20,15 @@
  background: #42B2FA;
  border-radius: 10px;
  box-shadow: 0px 5px 30px rgba(216, 220, 255, 0.4);
+}
+
+.tambah {
+ float: right;
+ margin-top:0px;
+}
+
+@media (max-width:991px ) {
+ .tambah {
+  display: none;
+ }
 }
