--- a/src/styles/components/_chooseMonth.scss
+++ b/src/styles/components/_chooseMonth.scss
@@ -60,36 +60,37 @@
 		justify-content: center;
 		margin-top: 0px;
 	}
-	.box-month {
-		justify-content: center;
-		padding: 10px;
-	}
 
  .box-month p{
   padding: 0px;
 		font-size: 20px	;
   text-align: center;
+		align-items: center;
  }
 
+	.box-month {
+		text-align: center;
+	}
+
+	.main-month {
+		width: 100%;
+		height: 100%;
+		padding: 28px;
+	}
 	.input-month {
 		padding: 10px;
 		height: 50px;
-		width: 50px;
+		margin-left: 0px;
+		width: 200px;
 		font-weight: 300;
 		font-size: 15px;
 	}
 
- .box-month, .purecounter {
-		font-size: 20px;
-  padding-top: 0px;
-  padding-left:0px;
- }
 	.button-report {
-		// margin-top: 10px;
-		margin-left: 0px;
+		margin-top: 20px;
+		margin-left: 0px;	
 		height: 50px;
-		width: 190px;
-	font-size: 15px;
-		
+		width: 200px;
+		font-size: 15px;
 	}
 }
