--- a/src/styles/pages/dashboard/_dashboard-page.scss
+++ b/src/styles/pages/dashboard/_dashboard-page.scss
@@ -93,3 +93,16 @@
     font-size: 1.5rem;
   }
 }
+
+.riwayat-transaksi {
+  // width: 20rem;
+  justify-content: center;
+  align-items: center;
+  // height: 5rem;
+  border: 1px solid black;
+  border-radius: 1rem;
+}
+
+.riwayat-list {
+  width: 100%;
+}
