fix margin for count-box-pengeluaran

--- a/src/styles/components/_kategoriList.scss
+++ b/src/styles/components/_kategoriList.scss
@@ -52,15 +52,13 @@
 }
 
 @media (max-width:766px ) {
- .count-box-pemasukan, .count-box-saldo, .count-box-pengeluaran {
+ .count-box-pemasukan, .count-box-saldo {
   margin-bottom: 10px;
   padding: 0px;
  }
 
  .count-box-pemasukan, .count-box-saldo, .count-box-pengeluaran, .purecounter {
   font-size: 22px;
-  padding-top: 5px;
-  // padding-left:20px;
  }
 
  .count-box-pemasukan, .count-box-saldo, .count-box-pengeluaran, .category-title{
@@ -68,7 +66,7 @@
  }
 
  .count-box-pengeluaran {
-  margin-top: 10px;
+
  }
 
  .category-icon {
@@ -78,8 +76,8 @@
 }
 
 @media (max-width:1000px) {
- .count-box-pengeluaran {
-  margin-top: 10px;
+ .count-box-pemasukan, .count-box-saldo {
+  margin-bottom: 10px;
   font-size: 23px;
  }
 }
